# BPED

./: README.md  bped.py  pyproject.toml  ruff.toml
V&V/: ReadMe.txt
V&V/S1/: S1.dxf  S1_description.txt
data/geometries/: cornering.dxf  counter_flow.dxf  multi_exit_corridor.dxf
files/: cornering.json
scripts/: cornering.py  distributions.py
src/bped/core/: bped.py
src/bped/utils/: logging_config.py
